--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,3 +1,4 @@
+<img src="/images/sigle-blanc-250px.jpg"></img>
 {% if site.title %}
 	<div class="header-title"><a href="{{ root_url }}/">{{ site.title }}</a></div>
 {% endif %}
