--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -2,7 +2,7 @@
 // Add styles here to make changes without digging in too much
 
 html {
-	background: #FFFFFF;
+	background-image: url('/images/themes03.jpg');
 }
 
 body {
