use a lighter version of the background + progressive

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -2,7 +2,7 @@
 // Add styles here to make changes without digging in too much
 
 html {
-	background-image: url('/images/themes03.jpg');
+	background-image: url('/images/themes03_light.gif');
 }
 
 body {
