--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -25,6 +25,9 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script>!window.jQuery && document.write(unescape('%3Cscript src="./javascripts/lib/jquery.min.js"%3E%3C/script%3E'))</script>
   <script src="{{ root_url }}/javascripts/octopress.js" type="text/javascript"></script>
+  <script src="{{ root_url }}/javascripts/jquery.tableofcontents.min.js" type="text/javascript"></script>
+  <script src="{{ root_url }}/javascripts/generate-toc.js" type="text/javascript"></script>
+
   {% include custom/head.html %}
   {% include google_analytics.html %}
 
