--- a/source/_includes/after_footer.html
+++ b/source/_includes/after_footer.html
@@ -13,7 +13,8 @@
   <script type="text/javascript">
   jQuery(document).ready(function() {
     // Put a TOC right before the entry content.
-    generateTOC('.entry-content-toc', null);
+    if(jQuery('div[id="tocBlock"]').length == 0)
+        generateTOC('.entry-content-toc', null);
   });
   </script>
 {% endif %}
